Fix skills section alignment on tablet

--- a/code/style.css
+++ b/code/style.css
@@ -708,6 +708,15 @@ h6 {
     padding: 5px;
   }
 
+  /*** SKILLS ***/
+
+  .skills-container div {
+    margin: 10px;
+    padding: 5px;
+    flex-basis: 20%;
+  }
+
+
   /*** BLOG ***/
 
   .blog {
